# ompl-demo

./: CMakeLists.txt  RigidBodyPlanning.cpp
docker/: Dockerfile
scripts/: RigidBodyPlanning.py
src/: benchmark.cpp  main.cpp
